--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 astroid==1.6.5
 click==6.7
 Flask==1.0.2
+Flask-SocketIO==3.0.1
+gevent==1.3.3
+gevent-websocket==0.10.1
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
@@ -8,6 +11,8 @@ lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
 pylint==1.9.2
+python-engineio==2.1.1
+python-socketio==1.9.0
 six==1.11.0
 Werkzeug==0.14.1
 wrapt==1.10.11
