--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask==1.0.2
 Flask-SocketIO==3.0.1
 gevent==1.3.3
 gevent-websocket==0.10.1
+greenlet==0.4.13
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
